<resources>
    <string name="app_name">ZhihuAdvertisementDemo</string>
    <string name="testTitle">testTitle</string>
    <string name="testContent">testContentafwsdnytuilttrqdARGYTtestContentafwsdnytuilttrqdtestContentafwsdnytuilttrqdtestContentafwsdnytuilttrqdtestContentafwsdnytuilttrqdKUItestContentafwsdnytuilttrqdtestContentafwsdnytuilttrqdtestContentafwsdnytuilttrqdtestContentafwsdnytuilttrqdLTRtestContentafwsdnytuilttrqdtestContentafwsdnytuilttrqdtestContentafwsdnytuilttrqdtestContentafwsdnytuilttrqdDWtestContentafwsdnytuilttrqdtestContentafwsdnytuilttrqdtestContentafwsdnytuilttrqdtestContentafwsdnytuilttrqdFYtestContentafwsdnytuilttrqdtestContentafwsdnytuilttrqdtestContentafwsdnytuilttrqdKtestContentafwsdnytuilttrqdtestContentafwsdnytuilttrqdtestContentafwsdnytuilttrqdUtestContentafwsdnytuilttrqdtestContentafwsdnytuilttrqdtestContentafwsdnytuilttrqdL</string>
    <string name="testTag">昆特牌</string>
    <string name="testDate">12月13日</string>
    <string name="testDiscuss">453</string>
</resources>
